syntax = "proto3";

import "google/protobuf/empty.proto";

// protoc --go_out=. --go-grpc_out=. --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto
option go_package = "./;api";
package csrf;

message CSRF {
  string token = 1;
  string email = 2;
}

message TokenCSRF {
  string token = 1;
}

message EmailCSRF {
  string email = 1;
}

message Valid {
  bool valid = 1;
}

service CSRFService {
  rpc CreateCSRFToken(EmailCSRF) returns(TokenCSRF);
  rpc InvalidateCSRFToken(CSRF) returns(google.protobuf.Empty);
  rpc ValidateCSRFToken(CSRF) returns(Valid);
}